@@ -145,3 +145,7 @@ Para samples no vale. Además en pc speaker implicaría lanzar ese sonido median
 -Para ZENG con más de 2 pcs:
 *master que pueda enviar snapshots a más de 1 slave. Fácil
 *ZRCP que permita más de 1 conexión a la vez, para recibir los eventos de envíos de teclas de los slaves. Aquí por una parte hay que tener semáforos (o no?) al actuar sobre según que partes de ZEsarUX y además lanzar threads aparte ( o fork? ) por cada conexión nueva de cliente ZRCP
+
+-snapshots z80 desde zxsp de MACHINE_ID_TIMEX_TS2068. falta que cargue contenido de ram, no parece
+
+-snapshots zsf de timex ts2068
