@@ -1,6 +1,7 @@
 Version 10.2 - xx edition. 10 May 2022
 
-Allow .Z80 snapshot loading with additional header of 31 byte size
+Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
+Fixed .Z80 Timex TS2068 snapshot loading
 
 
 Version 10.1 - Carrier Command edition. 06 May 2022
